# triangulum-daily3albums

./: .env.example  .gitignore  AGENTS.md  README.en.md  README.md  pyproject.toml  run_ambient_debug.txt
.github/workflows/: ci.yml  daily3albums.yml  pages.yml  pages_daily.yml
config/: config.yaml  endpoint_policies.yaml
daily3albums/: adapters.py  artifact_writer.py  cli.py  config.py  constraints.py  dry_run.py  request_broker.py
docs/: README.md  art-direction.md  command-log.md  runbook.md  ui-blueprint.md  ui-implementation-notes.md
docs/archive/: REVIEW_REPORT.md
docs/foundation/: README.md  daily-build-and-release-pipeline.md  data-sources-and-api-boundaries.md  recommendation-system.md  ui-terminology.md
docs/revive/: 2026-06-code-audit.md  2026-06-foundation-docs-audit.md  2026-06-housekeeping-cleanup.md  2026-06-local-baseline.txt  2026-06-metadata-enrichment-audit.md  2026-06-npm-audit.md  2026-06-p2-maintenance.md  2026-06-performance-metrics-archive-maintenance.md  2026-06-post-share-card-followups.md  (+2 more)
doctor/: __init__.py  run.py  run_doctor.py
scripts/: build_metrics.py  golden_check.py  make_placeholder.py  recommendation_observability_summary.py  restore_static_archive_seed.py  self_check.py  update_golden.ps1
tests/: test_artifact_writer.py  test_build_metrics.py  test_cli_ui_timeout.py  test_config_decade_mode.py  test_constraints.py  test_cover_policy.py  test_discogs_resilience.py  test_dry_run_prefilter.py  test_failure_messages.py  test_hint_normalization.py  test_mb_diagnostics_counters.py  test_recommendation_observability_payload.py  test_recommendation_observability_summary.py  test_request_broker_retry_matrix.py  test_self_check.py  test_smoke.py  test_static_archive_seed.py
ui/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts  vitest.config.ts
web/: archive.html  index.html
(+56 files in other folders)
