[project]
name = "daily3albums"
version = "0.1.0"
description = "Triangulum: Daily 3 Albums (static site + scheduled generation)"
requires-python = ">=3.11"

# 运行项目本体所需的“基础依赖”
dependencies = [
  "httpx>=0.27.0",
  "PyYAML>=6.0.1",
  "python-dotenv>=1.0.1",
  "pillow>=10.4.0",
  "rapidfuzz>=3.9.0",
  "boto3>=1.34.0",
]

# 命令行入口
[project.scripts]
daily3albums = "daily3albums.cli:main"

# 可选依赖：按“用途套餐”分组
# 用法：
#   pip install -e ".[doctor]"  # 安装体检/截图相关依赖
#   pip install -e ".[dev]"     # 安装开发者常用（含 doctor）
[project.optional-dependencies]

# 体检（doctor）所需：截图 + 基础静态检查 + 测试运行
doctor = [
  "playwright>=1.46.0",
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

# 开发（dev）套餐：在 doctor 基础上再加类型检查等（可按你需要删减）
dev = [
  "daily3albums[doctor]",
  "mypy>=1.10.0",
]

# setuptools：自动发现包（比手写 packages=["daily3albums"] 更稳，子包也能打进去）
[tool.setuptools.packages.find]
where = ["."]
include = ["daily3albums*"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

# -----------------------
# 工具配置（让“体检”更可复现）
# -----------------------

# Ruff：最低限度的代码健康检查（你可以后续再收紧规则）
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

# pytest：默认从 tests/ 找测试
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
